Removed media.Object derived values
