# restfulApiHandler/src/swagger.json
@@ -26,17 +26,6 @@
     "/api/example": {
       "get": {
         "description": "Example using `Route.index` handler alias.",
-        "parameters": [
-          {
-            "in": "header",
-            "name": "Accept",
-            "schema": {
-              "type": "string",
-              "example": "application/json",
-              "required": true
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Returns JSON response.",
@@ -68,17 +57,6 @@
       },
       "post": {
         "description": "Example using `Route.submit` handler alias.",
-        "parameters": [
-          {
-            "in": "header",
-            "name": "Accept",
-            "schema": {
-              "type": "string",
-              "example": "application/json",
-              "required": true
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Returns JSON response.",
@@ -119,15 +97,6 @@
       "put": {
         "description": "Example using `Route.create` handler alias.",
         "parameters": [
-          {
-            "in": "header",
-            "name": "Accept",
-            "schema": {
-              "type": "string",
-              "example": "application/json",
-              "required": true
-            }
-          },
           {
             "in": "path",
             "name": "resourceId",
@@ -177,15 +146,6 @@
         "description": "Example using `Route.update` handler alias.",
         "parameters": [
           {
-            "in": "header",
-            "name": "Accept",
-            "schema": {
-              "type": "string",
-              "example": "application/json",
-              "required": true
-            }
-          },
-          {
             "in": "path",
             "name": "resourceId",
             "schema": {
@@ -233,15 +193,6 @@
       "delete": {
         "description": "Example using `Route.delete` handler method.",
         "parameters": [
-          {
-            "in": "header",
-            "name": "Accept",
-            "schema": {
-              "type": "string",
-              "example": "application/json",
-              "required": true
-            }
-          },
           {
             "in": "path",
             "name": "resourceId",
